# gwe

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  RELEASING.md  build.sh  flatpak_run.sh  meson.build  meson_options.txt  mypy.ini  nix_python_req_sha256.txt  pylintrc  requirements.txt  run  run.sh  setup.py  shell.nix
.gitlab/issue_templates/: Bug.md  Feature request.md
.gitlab/merge_request_templates/: Merge request.md
.pycharm/: gwe
data/: com.leinardi.gwe.appdata.xml  com.leinardi.gwe.desktop.in  com.leinardi.gwe.gresource.xml  com.leinardi.gwe.gschema.xml  com.leinardi.gwe.pkexec.policy  com.leinardi.gwe.service.desktop  com.leinardi.gwe.service.in  meson.build  org.leinardi.gwe.appdata.xml  org.leinardi.gwe.desktop.in  org.leinardi.gwe.gresource.xml  org.leinardi.gwe.gschema.xml  org.leinardi.gwe.service.desktop  org.leinardi.gwe.service.in
data/icons/: render-bitmaps.py
data/ui/: edit_fan_profile.glade  edit_oc_profile.glade  historical_data.glade  main.glade  preferences.glade
gwe/: Xlib  __main__.py  app.py  conf.py  di.py  interactor.py  main.py  model.py  repository.py
gwe/data/: edit_speed_profile.glade  historical_data.glade  main.glade  preferences.glade
gwe/interactor/: __init__.py  check_new_version_interactor.py  get_status_interactor.py  has_nvidia_driver_interactor.py  set_fan_speed_interactor.py  set_overclock_interactor.py  set_persistence_mode_interactor.py  set_power_limit_iInteractor.py  settings_interactor.py
gwe/model/: __init__.py  cb_change.py  clocks.py  current_fan_profile.py  current_overclock_profile.py  fan.py  fan_profile.py  fan_profile_type.py  gpu_attributes.py  gpu_status.py  info.py  overclock.py  overclock_profile.py  overclock_profile_type.py  power.py  setting.py  speed_step.py  status.py  temp.py
gwe/nvidia/: __init__.py  minx.py  nvcmd.py  nvctrl.py  nvtarget.py  xnet.py
gwe/presenter/: edit_fan_profile.py  edit_fan_profile_presenter.py  edit_overclock_profile.py  edit_overclock_profile_presenter.py  edit_speed_profile.py  historical_data.py  historical_data_presenter.py  main.py  main_presenter.py  preferences.py  preferences_presenter.py
gwe/repository/: __init__.py  nvidia_client.py  nvidia_repository.py  nvidia_root_service.py  overclock-agent.py  pynvml.py
gwe/util/: concurrency.py  deployment.py  desktop_entry.py  log.py  path.py  udev.py  view.py
gwe/util/desktop/: __init__.py  desktop_parser.py
gwe/view/: edit_fan_profile.py  edit_fan_profile_view.py  edit_overclock_profile.py  edit_overclock_profile_view.py  edit_speed_profile.py  graph_stacked_renderer.py  graph_stacked_renderer_view.py  historical_data.py  historical_data_view.py  main.py  main_view.py  preferences.py  preferences_view.py
misc/: com.leinardi.gwe-git.json
misc/shared-modules/: libappindicator-ftbfs.patch
scripts/: build_flatpak.py  make_local_manifest.py  meson_post_install.py
snap/: snapcraft.yaml
